Added file support + fixes